# conflens

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  space_app.py
.github/huggingface/: space_readme_header.md
.github/workflows/: ci.yml  lint.yml  release.yml  sync-hf-space.yml  test.yml
conference_analyzer/: app.py  bibtex.py  cache.py  classifier.py  cli.py  dedup.py  llm.py  models.py  pipeline.py  pptx_export.py  scraper.py  sources.py  topics.py
conflens/: __init__.py  app.py  cache.py  cli.py  gradio_app.py  llm.py  models.py  pipeline.py  scraper.py  sources.py  view.py
docs/: ARCHITECTURE.md
tests/: test_bibtex_cache.py  test_classifier_topics.py  test_dblp_source.py  test_dedup.py  test_emnlp_source.py  test_gradio_app.py  test_ijcai_source.py  test_llm.py  test_matching.py  test_naacl_source.py  test_openreview_source.py  test_pscc_source.py  test_result_roundtrip.py  test_scraper.py  test_view.py
